# PAI

pai_training/: README_CUBE_GRASP.md  pyproject.toml
pai_training/configs/: conversion_config.yaml  cube_grasp_config.yaml
pai_training/scripts/: debug_action_scale.py  infer_cube_grasp.py  rosbag2lerobot.py  rosbag2lerobot_with_augmentation.py  train_cube_grasp.py
pai_training/src/pai_training/models/: __init__.py  cube_grasp_policy.py
